# xrheed

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  docs.yml  publish.yml  ruff.yml
docs/: requirements.txt
docs/notebooks/: load_RHEED_image_Si111.ipynb
docs/source/: api.rst  conf.py  example-notebooks.rst  geometry.rst  index.rst  installation.rst  introduction.rst  loaders.rst  plugins.rst  usage.rst  xrheed.rst
docs/source/development/: index.rst
docs/source/notebooks/: diffraction_profiles.ipynb  ewald_construction.ipynb  ewald_kxky_tranformation.ipynb  ewald_kxky_transfor_many_images.ipynb  ewald_kxky_transformation.ipynb  ewald_kxky_transformation_advanced.ipynb  ewald_spot_matching.ipynb  getting_started.ipynb  index.rst  old_generate_lattice.ipynb  rheed_3d_stacks.ipynb
docs/source/notebooks/cache/: cache_match_alpha.dill  cache_match_alpha_scale.dill  cache_match_scale.dill
docs/source/notebooks/example_data/: Si_111_7x7_112_phi_05.raw  Si_111_7x7_112_phi_10.raw  Si_111_7x7_112_phi_15.raw  Si_111_7x7_112_phi_20.raw  Si_111_7x7_112_phi_25.raw  Si_111_7x7_112_phi_30.raw  Si_111_r3Ag_112_phi_00.raw  Si_111_r3Ag_112_phi_15.raw  Si_111_r3Ag_112_phi_30.raw  Si_111_r3Ag_112_thB.raw  Si_111_r3Ag_112_thC.raw  Si_111_r3Ag_thA_phi00.raw  Si_111_r3Ag_thA_phi05.raw  Si_111_r3Ag_thA_phi10.raw  Si_111_r3Ag_thA_phi15.raw  Si_111_r3Ag_thA_phi20.raw  Si_111_r3Ag_thA_phi25.raw  Si_111_r3Ag_thA_phi30.raw  Si_111_r3Ag_thB_phi00.raw  Si_111_r3Ag_thB_phi05.raw  Si_111_r3Ag_thB_phi10.raw  Si_111_r3Ag_thB_phi15.raw  Si_111_r3Ag_thB_phi20.raw  Si_111_r3Ag_thB_phi25.raw  Si_111_r3Ag_thB_phi30.raw  si_111_7x7_112_t2.raw
src/pyrheedx/: io.py  xarray_accessors.py
src/pyrheedx/plugins/: umcs_arpes_raw.py
src/xrheed/: __init__.py  constants.py  io.py  loaders.py  plot.py  xarray_accessors.py
src/xrheed/analysis/: __init__.py  peaks.py
src/xrheed/conversion/: __init__.py  base.py  image.py
src/xrheed/ewald/: __init__.py  ewald.py  lattice.py
src/xrheed/kinematics/: __init__.py  cache_utils.py  ewald.py  ewald_matching.py  lattice.py
src/xrheed/plotting/: __init__.py  base.py  images.py  images_back.py  overview.py  profiles.py
src/xrheed/plugins/: __init__.py  dsnp_arpes_bmp.py  dsnp_arpes_raw.py  example_plugin_bmp.py  umcs_arpes_raw.py
src/xrheed/preparation/: __init__.py  alignment.py  filters.py
tests/: test_accessors.py  test_conversion.py  test_data_loading.py  test_ewald.py  test_lattice.py  test_load_umcs_arpes_raw.py  test_preparation.py  test_preparation_filters.py
tests/data/: Si_111_7x7_112_phi_00.raw  Si_111_r3Ag_112_thA.raw  Si_111_r3Ag_112_thD.raw
