[project]
name = "PyRHEEDx"
version = "1.0.0a1"  # First alpha pre-release version
authors = [
    {name = "Marek Kopciuszyński", email = "mkopciuszynski@gmail.com"},
]

description = "RHEED tools"
readme = "README.rst"
requires-python = ">=3.11"

keywords = ["RHEED"]

license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    'xarray>=0.18.2',
    'numpy>=1.21.0',
    'matplotlib>=3.4.2',
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"