[metadata]
name = xrheed
version = 0.5.9
author = Marek Kopciuszynski
author_email = mkopciuszynski@gmail.com
description = An xarray-based toolkit for RHEED image analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
keywords = RHEED, diffraction, xarray, analysis
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Physics :: Surface Science

[options]
packages = find:
python_requires = >=3.12
install_requires =
    xarray>=0.18.2
    numpy>=1.21.0
    scipy>=1.7.0
    matplotlib>=3.4.2
    ruptures>=1.1.7
    tqdm>=4.62.0
    lmfit>=1.1.0
    dill>=0.3.4
    Pillow>=9.0.0
